Fix: enabled Prometheus

--- a/environment/dev/local/values.yaml
+++ b/environment/dev/local/values.yaml
@@ -219,6 +219,7 @@ prometheusOperator:
 ##############################################################################################
 
 prometheus:
+  enabled: true
   spec:
     ruleSelector:
       matchLabels:
