--- a/kubernetes/prometheus-stack/templates/a-hos/service-monitor.yaml
+++ b/kubernetes/prometheus-stack/templates/a-hos/service-monitor.yaml
@@ -3,7 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: backend-service-monitor
-  namespace: monitoring
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
     release: prometheus-stack
 spec:
@@ -24,7 +24,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: n8n-service-monitor
-  namespace: monitoring
+  namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
     release: prometheus-stack
 spec:
