--- a/kubernetes/prometheus-stack/templates/a-hos/service-monitor.yaml
+++ b/kubernetes/prometheus-stack/templates/a-hos/service-monitor.yaml
@@ -5,7 +5,7 @@ metadata:
   name: backend-service-monitor
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    release: prometheus-stack
+    release: {{ $.Release.Name | quote }}
 spec:
   selector:
     matchLabels:
@@ -26,7 +26,7 @@ metadata:
   name: n8n-service-monitor
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
-    release: prometheus-stack
+    release: {{ $.Release.Name | quote }}
 spec:
   selector:
     matchLabels:
