--- a/environment/dev/local/values.yaml
+++ b/environment/dev/local/values.yaml
@@ -191,12 +191,6 @@ grafana:
             path: /var/lib/grafana/dashboards/default
   dashboardsConfigMaps:
     default: grafana-hos-dashboard
-  database:
-    type: postgres
-    host: postgresql-0.postgresql-svc:5432
-    name: grafana
-    user: grafana
-    password: grafana_password
 
 ##############################################################################################
 # Kubelet
@@ -213,6 +207,7 @@ kubelet:
 prometheusOperator:
   serviceMonitor:
     interval: 30s
+  annotations: {} # disable excessive annotations, causes length errors
 
 ##############################################################################################
 # Prometheus
