Changed: synced prod and staging values.yaml. Added: ServerSideApply=true so it doesn't cause annotations too long errors

--- a/local-prom-graf.yaml
+++ b/local-prom-graf.yaml
@@ -18,6 +18,7 @@ spec:
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+    - ServerSideApply=true
     automated:
       prune: true
       selfHeal: true    # stops argocd from changing the resources if changes were made manually by the user 
