Changed: divided the project into local/eks kubernetes manifests, WORKING state

--- a/environment/dev/eks/values.yaml
+++ b/environment/dev/eks/values.yaml
@@ -1,3 +1,7 @@
+##############################################################################################
+# Frontend
+##############################################################################################
+
 frontend:
   name: react-frontend
   reactFrontend:
@@ -19,6 +23,11 @@ frontend:
       port: 80
       protocol: TCP
       targetPort: 80
+
+##############################################################################################
+# Backend
+##############################################################################################
+
 backend:
   name: flask-backend
   flaskBackend:
@@ -40,6 +49,11 @@ backend:
       port: 5000
       protocol: TCP
       targetPort: 5000
+
+##############################################################################################
+# n8n
+##############################################################################################
+
 n8n:
   name: n8n
   n8n:
@@ -81,6 +95,11 @@ n8nCm:
     N8N_METRICS_INCLUDE_API_STATUS_CODE_LABEL: 'true'
     N8N_METRICS_QUEUE_METRICS_INTERVAL: '10'
     N8N_DIAGNOSTICS_ENABLED: 'true'
+
+##############################################################################################
+# CM
+##############################################################################################
+
 cm:
   name: general-config
   db_name: postgres
@@ -92,6 +111,11 @@ cm:
   cors_origins: http://localhost,http://localhost:3000,http://frontend-svc:3000,http://localhost:80,http://frontend-svc
   webhook_url: http://n8n-svc:5678
   n8n_editor_base_url: http://localhost:5678
+
+##############################################################################################
+# Secrets
+##############################################################################################
+
 secrets:
   name: general-secrets
   data:
@@ -100,6 +124,11 @@ secrets:
     n8n_api_key: n8n-api-key-12345
     n8n_encryption_key: your-encryption-key
     open_ai_api_key: $OPENAI_API_KEY
+
+##############################################################################################
+# Ingress
+##############################################################################################
+
 ingress:
   type: lbc
   name: main-ingress
@@ -107,7 +136,7 @@ ingress:
   enabled: true
   className: alb
   rules:
-    host: localhost
+    host: www.iliadiv.online
     frontendPaths:
       path: /
       pathType: Prefix
@@ -117,6 +146,21 @@ ingress:
     n8nPaths:
       path: /webhook/chat
       pathType: Prefix
+
+##############################################################################################
+# ArgoCD
+##############################################################################################
+
+dex:
+  enabled: false
+
+notifications:
+  enabled: false
+
+##############################################################################################
+# Grafana
+##############################################################################################
+
 grafana:
   defaultDashboardsEnabled: false
   dashboardProviders:
@@ -133,17 +177,37 @@ grafana:
             path: /var/lib/grafana/dashboards/default
   dashboardsConfigMaps:
     default: grafana-hos-dashboard
+
+##############################################################################################
+# Kubelet
+##############################################################################################
+
 kubelet:
   serviceMonitor:
     interval: 30s
+
+##############################################################################################
+# PrometheusOperator
+##############################################################################################
+
 prometheusOperator:
   serviceMonitor:
     interval: 30s
+
+##############################################################################################
+# Prometheus
+##############################################################################################
+
 prometheus:
   spec:
     ruleSelector:
       matchLabels:
         prometheus: hos
+
+##############################################################################################
+# AlertManager
+##############################################################################################
+
 alertmanager:
   enabled: true
   config:
