--- a/environment/dev/local/values.yaml
+++ b/environment/dev/local/values.yaml
@@ -172,6 +172,16 @@ ingress:
       pathType: Prefix
 
 ##############################################################################################
+# ArgoCD
+##############################################################################################
+
+dex:
+  enabled: false
+
+notifications:
+  enabled: false
+
+##############################################################################################
 # Grafana
 ##############################################################################################
 
