--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -21,6 +21,9 @@ spec:
         app: backend
         {{- include "Home-Office-Store.labels" . | nindent 8 }}
     spec:
+      {{- if and .Values.ingress.enabled (eq .Values.ingress.type "lbc") }}
+      serviceAccountName: service-token-reader
+      {{- end }}
       containers:
       - name: {{ .Values.backend.flaskBackend.name }}
         image: "{{ .Values.backend.flaskBackend.image }}:{{ .Values.backend.flaskBackend.imageTag }}"
@@ -46,6 +49,16 @@ spec:
             configMapKeyRef:
               name: {{ .Values.cm.name }}
               key: db_host
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.secrets.name }}
+              key: db_user
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Values.secrets.name }}
+              key: db_password
         {{- end }}
         ###
         ### EKS
@@ -67,16 +80,6 @@ spec:
             configMapKeyRef:
               name: {{ .Values.cm.name }}
               key: db_name
-        - name: DB_USER
-          valueFrom:
-            secretKeyRef:
-              name: {{ .Values.secrets.name }}
-              key: db_user
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: {{ .Values.secrets.name }}
-              key: db_password
         {{- include "Home-Office-Store.backend.resources" . | nindent 8 }}
         livenessProbe:
           httpGet:
@@ -94,6 +97,21 @@ spec:
           periodSeconds: 10
           timeoutSeconds: 3
           failureThreshold: 30
+            ##
+      ## EKS
+      {{- if and .Values.ingress.enabled (eq .Values.ingress.type "lbc") }}
+        - name: flask-secrets
+          mountPath: "/mnt/secrets-store/flask"
+          readOnly: true
+      volumes:
+      - name: flask-secrets
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "flask-service-token"
+      {{- end}}
+      ##
       initContainers:
       - name: db-wait
         image: busybox:1.35
@@ -204,28 +222,22 @@ spec:
         app: n8n
         {{- include "Home-Office-Store.labels" . | nindent 8 }}
     spec:
+      {{- if and .Values.ingress.enabled (eq .Values.ingress.type "lbc") }}
       serviceAccountName: service-token-reader
+      {{- end }}
       containers:
       - name: {{ .Values.n8n.n8n.name }}
         image: "{{ .Values.n8n.n8n.image }}:{{ .Values.n8n.n8n.imageTag }}"
         ports:
         - containerPort: {{ .Values.n8n.n8n.port }}
         env:
+        ### LOCAL
+        {{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
         - name: DB_POSTGRESDB_HOST
           valueFrom:
             configMapKeyRef:
               name: {{ .Values.cm.name }}
               key: db_host
-        - name: DB_POSTGRESDB_PORT
-          valueFrom:
-            configMapKeyRef:
-              name: {{ .Values.cm.name }}
-              key: db_port
-        - name: DB_POSTGRESDB_DATABASE
-          valueFrom:
-            configMapKeyRef:
-              name: {{ .Values.cm.name }}
-              key: db_name
         - name: DB_POSTGRESDB_USER
           valueFrom:
             secretKeyRef:
@@ -236,6 +248,27 @@ spec:
             secretKeyRef:
               name: {{ .Values.secrets.name }}
               key: db_password
+        {{- end}}
+        ###
+        ### EKS
+        {{- if and .Values.ingress.enabled (eq .Values.ingress.type "lbc") }}
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              name: postgres-endpoint
+              key: db_host
+        {{- end }}
+        ###
+        - name: DB_POSTGRESDB_DATABASE
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Values.cm.name }}
+              key: db_name
+        - name: DB_POSTGRESDB_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: {{ .Values.cm.name }}
+              key: db_port
         - name: N8N_API_KEY
           valueFrom:
             secretKeyRef:
@@ -279,15 +312,24 @@ spec:
       ## EKS
       {{- if and .Values.ingress.enabled (eq .Values.ingress.type "lbc") }}
         volumeMounts:
-        - name: secret-from-aws
-          mountPath: "/mnt/secrets-store"
+        - name: n8n-secrets
+          mountPath: "/mnt/secrets-store/n8n"
+          readOnly: true
+        - name: flask-secrets
+          mountPath: "/mnt/secrets-store/flask"
           readOnly: true
       volumes:
-      - name: secret-from-aws
+      - name: n8n-secrets
         csi:
           driver: secrets-store.csi.k8s.io
           readOnly: true
           volumeAttributes:
-            secretProviderClass: "service-token"
+            secretProviderClass: "n8n-service-token"
+      - name: flask-secrets
+        csi:
+          driver: secrets-store.csi.k8s.io
+          readOnly: true
+          volumeAttributes:
+            secretProviderClass: "flask-service-token"
       {{- end}}
       ##
