--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -294,7 +294,7 @@ spec:
         {{- include "Home-Office-Store.n8n.resources" . | nindent 8 }}
         livenessProbe:
           httpGet:
-            path: /healthz
+            path: /
             port: {{ .Values.n8n.n8n.port }}
           initialDelaySeconds: 60
           periodSeconds: 30
@@ -302,7 +302,7 @@ spec:
           failureThreshold: 3
         startupProbe:
           httpGet:
-            path: /healthz
+            path: /
             port: {{ .Values.n8n.n8n.port }}
           initialDelaySeconds: 30
           periodSeconds: 10
