--- a/environment/staging/eks/values.yaml
+++ b/environment/staging/eks/values.yaml
@@ -1,9 +1,12 @@
+##############################################################################################
+# Frontend
+##############################################################################################
 frontend:
   name: react-frontend
   reactFrontend:
     name: react-frontend
     image: irbis3/frontend
-    imageTag: e5b3d582cdbc6da71f4e1ef0780cc7e2165931dc
+    imageTag: 82c73979a8d7f43707b9ee44d55fb5fee4b43f19
     port: 80
   resources:
     requests:
@@ -19,12 +22,17 @@ frontend:
       port: 80
       protocol: TCP
       targetPort: 80
+
+##############################################################################################
+# Backend
+##############################################################################################
+
 backend:
   name: flask-backend
   flaskBackend:
     name: flask-backend
     image: irbis3/backend
-    imageTag: e5b3d582cdbc6da71f4e1ef0780cc7e2165931dc
+    imageTag: 82c73979a8d7f43707b9ee44d55fb5fee4b43f19
     port: 5000
   resources:
     requests:
@@ -40,12 +48,17 @@ backend:
       port: 5000
       protocol: TCP
       targetPort: 5000
+
+##############################################################################################
+# n8n
+##############################################################################################
+
 n8n:
   name: n8n
   n8n:
     name: n8n
     image: irbis3/n8n
-    imageTag: e5b3d582cdbc6da71f4e1ef0780cc7e2165931dc
+    imageTag: 82c73979a8d7f43707b9ee44d55fb5fee4b43f19
     port: 5678
   resources:
     requests:
@@ -61,6 +74,31 @@ n8n:
       port: 5678
       protocol: TCP
       targetPort: 5678
+
+##############################################################################################
+# PostgreSQL
+##############################################################################################
+
+postgresql:
+  name: postgresql
+  replicas: 1
+  postgresql:
+    name: postgresql
+    image: postgres
+    imageTag: latest
+    port: 5432
+  resources:
+    requests:
+      memory: 256Mi
+      cpu: 100m
+    limits:
+      memory: 512Mi
+      cpu: 500m
+  service:
+    name: postgresql-svc
+    type: ClusterIP
+    clusterIP: None
+    clusterIPs: None
 
 ##############################################################################################
 # n8n-CM
@@ -81,6 +119,11 @@ n8nCm:
     N8N_METRICS_INCLUDE_API_STATUS_CODE_LABEL: 'true'
     N8N_METRICS_QUEUE_METRICS_INTERVAL: '10'
     N8N_DIAGNOSTICS_ENABLED: 'true'
+
+##############################################################################################
+# CM
+##############################################################################################
+
 cm:
   name: general-config
   db_name: postgres
@@ -92,6 +135,11 @@ cm:
   cors_origins: http://localhost,http://localhost:3000,http://frontend-svc:3000,http://localhost:80,http://frontend-svc
   webhook_url: http://n8n-svc:5678
   n8n_editor_base_url: http://localhost:5678
+
+##############################################################################################
+# Secrets
+##############################################################################################
+
 secrets:
   name: general-secrets
   data:
@@ -100,10 +148,15 @@ secrets:
     n8n_api_key: n8n-api-key-12345
     n8n_encryption_key: your-encryption-key
     open_ai_api_key: $OPENAI_API_KEY
+
+##############################################################################################
+# Ingress
+##############################################################################################
+
 ingress:
   type: lbc
   name: main-ingress
-  certARN: arn:aws:acm:us-east-1:337909746080:certificate/3c61e02a-58f5-41bd-86b4-24867f3d313b
+  certARN: arn:aws:acm:us-east-1:337909746080:certificate/f18f4294-80b2-4322-ba30-314855addfd2
   enabled: true
   className: alb
   rules:
@@ -117,6 +170,11 @@ ingress:
     n8nPaths:
       path: /webhook/chat
       pathType: Prefix
+
+##############################################################################################
+# Grafana
+##############################################################################################
+
 grafana:
   defaultDashboardsEnabled: false
   dashboardProviders:
@@ -133,17 +191,42 @@ grafana:
             path: /var/lib/grafana/dashboards/default
   dashboardsConfigMaps:
     default: grafana-hos-dashboard
+
+##############################################################################################
+# Kubelet
+##############################################################################################
+
 kubelet:
   serviceMonitor:
     interval: 30s
 prometheusOperator:
   serviceMonitor:
     interval: 30s
+
+##############################################################################################
+# PrometheusOperator
+##############################################################################################
+
+prometheusOperator:
+  serviceMonitor:
+    interval: 30s
+  annotations: {} # disable excessive annotations, causes length errors
+
+##############################################################################################
+# Prometheus
+##############################################################################################
+
+
 prometheus:
   spec:
     ruleSelector:
       matchLabels:
         prometheus: hos
+
+##############################################################################################
+# AlertManager
+##############################################################################################
+
 alertmanager:
   enabled: true
   config:
