--- a/environment/dev/eks/values.yaml
+++ b/environment/dev/eks/values.yaml
@@ -1,3 +1,7 @@
+##############################################################################################
+# Frontend
+##############################################################################################
+
 frontend:
   name: react-frontend
   reactFrontend:
@@ -19,6 +23,11 @@ frontend:
       port: 80
       protocol: TCP
       targetPort: 80
+
+##############################################################################################
+# Backend
+##############################################################################################
+
 backend:
   name: flask-backend
   flaskBackend:
@@ -40,6 +49,11 @@ backend:
       port: 5000
       protocol: TCP
       targetPort: 5000
+
+##############################################################################################
+# n8n
+##############################################################################################
+
 n8n:
   name: n8n
   n8n:
@@ -61,6 +75,11 @@ n8n:
       port: 5678
       protocol: TCP
       targetPort: 5678
+
+##############################################################################################
+# PostgreSQL
+##############################################################################################
+
 postgresql:
   name: postgresql
   replicas: 1
@@ -81,6 +100,11 @@ postgresql:
     type: ClusterIP
     clusterIP: None
     clusterIPs: None
+
+##############################################################################################
+# n8n-CM
+##############################################################################################
+
 n8nCm:
   envn8n:
     name: n8n-config
@@ -96,6 +120,11 @@ n8nCm:
     N8N_METRICS_INCLUDE_API_STATUS_CODE_LABEL: 'true'
     N8N_METRICS_QUEUE_METRICS_INTERVAL: '10'
     N8N_DIAGNOSTICS_ENABLED: 'true'
+
+##############################################################################################
+# CM
+##############################################################################################
+
 cm:
   name: general-config
   db_name: postgres
@@ -107,6 +136,11 @@ cm:
   cors_origins: http://localhost,http://localhost:3000,http://frontend-svc:3000,http://localhost:80,http://frontend-svc
   webhook_url: http://n8n-svc:5678
   n8n_editor_base_url: http://localhost:5678
+
+##############################################################################################
+# Secrets
+##############################################################################################
+
 secrets:
   name: general-secrets
   data:
@@ -115,6 +149,11 @@ secrets:
     n8n_api_key: n8n-api-key-12345
     n8n_encryption_key: your-encryption-key
     open_ai_api_key: $OPENAI_API_KEY
+
+##############################################################################################
+# Ingress
+##############################################################################################
+
 ingress:
   type: lbc
   name: main-ingress
@@ -132,6 +171,11 @@ ingress:
     n8nPaths:
       path: /webhook/chat
       pathType: Prefix
+
+##############################################################################################
+# Grafana
+##############################################################################################
+
 grafana:
   defaultDashboardsEnabled: false
   dashboardProviders:
@@ -148,17 +192,42 @@ grafana:
             path: /var/lib/grafana/dashboards/default
   dashboardsConfigMaps:
     default: grafana-hos-dashboard
+
+##############################################################################################
+# Kubelet
+##############################################################################################
+
 kubelet:
   serviceMonitor:
     interval: 30s
 prometheusOperator:
   serviceMonitor:
     interval: 30s
+
+##############################################################################################
+# PrometheusOperator
+##############################################################################################
+
+prometheusOperator:
+  serviceMonitor:
+    interval: 30s
+  annotations: {} # disable excessive annotations, causes length errors
+
+##############################################################################################
+# Prometheus
+##############################################################################################
+
+
 prometheus:
   spec:
     ruleSelector:
       matchLabels:
         prometheus: hos
+
+##############################################################################################
+# AlertManager
+##############################################################################################
+
 alertmanager:
   enabled: true
   config:
