--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -279,6 +279,10 @@ spec:
             secretKeyRef:
               name: {{ .Values.secrets.name }}
               key: n8n_encryption_key
+        - name: DB_POSTGRESDB_SSL_ENABLED
+          value: "true"
+        - name: DB_POSTGRESDB_SSL_REJECT_UNAUTHORIZED  
+          value: "false"
         ## LOCAL
         {{- if and .Values.ingress.enabled (eq .Values.ingress.type "traefik") }}
         - name: OPENAI_API_KEY
