--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -263,6 +263,8 @@ spec:
           value: "false"
         {{- end }}
         ###
+        - name: ALLOW_UNAUTHORIZED
+          value: {{ .Values.n8n.unathorized }}
         - name: DB_POSTGRESDB_DATABASE
           valueFrom:
             configMapKeyRef:
