fix: wrong values path

--- a/kubernetes/Home-Office-Store/templates/deployment.yaml
+++ b/kubernetes/Home-Office-Store/templates/deployment.yaml
@@ -264,7 +264,7 @@ spec:
         {{- end }}
         ###
         - name: ALLOW_UNAUTHORIZED
-          value: {{ .Values.n8n.unathorized }}
+          value: {{ .Values.n8n.n8n.unathorized }}
         - name: DB_POSTGRESDB_DATABASE
           valueFrom:
             configMapKeyRef:
